--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "influx-demo",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "got": "^11.8.2",
     "influx": "^5.9.2",
     "lodash": "^4.17.21"
   },
   "scripts": {
-    "start": "node p1query.js"
+    "start": "node p2query.js"
   }
 }
